# igus_rebel

rebel_description/: CMakeLists.txt  package.xml
rebel_description/launch/: visualize_rebel.launch.py
rebel_description/meshes/robolink_rebel/: Robolink_RebeL_001.dae  Robolink_RebeL_002_0.dae  Robolink_RebeL_002_1.dae  Robolink_RebeL_002_2.dae
rebel_description/rviz/: visualize_rebel.rviz
rebel_description/urdf/: igus_rebel.control.xacro  igus_rebel.urdf  igus_rebel_robot.urdf.xacro
rebel_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rebel_moveit_config/config/: igus_rebel.ros2_control.xacro  igus_rebel.srdf  igus_rebel.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
rebel_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
rebel_webots/: CMakeLists.txt  package.xml
rebel_webots/launch/: robot_launch.py
rebel_webots/proto/: Rebel.proto
rebel_webots/rebel_webots/: rebel_webots_driver.py
rebel_webots/urdf/: rebel.urdf.xacro
rebel_webots/worlds/: rebel_world.wbt
