<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rebel_webots</name>
  <version>0.1.0</version>
  <description>Webots configuration for the igus rebel</description>
  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>webots_ros2_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
